# procNumNoDocExec

./: .dockerignore  .gitignore  Dockerfile  README.md  crontab  docker-compose.yml  pyproject.toml
src/: check_execution_doc_processor.py  main.py
src/procnumnodocexec/: __init__.py  check_decision_processor.py  config.py  database.py  db.py  decision_llm.py  execution_doc_llm.py  file_handler.py  llm_provider.py  models.py  parser_service.py  remote_client.py  repositories.py  schemas.py
tests/: test_execution_doc_llm.py
